# LPPSolve

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  TODO  config.h.in  version
.github/workflows/: build.yml  c-cpp.yml
assets/: CMakeLists.txt  default.frag  default.vert  grid.frag  grid.vert  plane.frag  plane.vert
include/: assets.h  builtin-shaders.h  camera.h  config.h  localman.h  solver.h
locale/: CMakeLists.txt  based.pot
locale/C/: en_US.po  ru_RU.po
locale/C/LC_MESSAGES/: ru_RU.mo
locale/translated/: en.po  ru_RU.po
preconfigure/: bake_shaders.py  tools.py
src/: CMakeLists.txt  LPPShow.cpp  assets.cpp  camera.cpp  display.cpp  solver.cpp
tests/: tests.cpp
